--- a/taotao-manager/taotao-manager-web/src/main/webapp/WEB-INF/js/jquery-easyui-1.4.1/demo/datagrid/clientpagination.html
+++ b/taotao-manager/taotao-manager-web/src/main/webapp/WEB-INF/js/jquery-easyui-1.4.1/demo/datagrid/clientpagination.html
@@ -52,7 +52,7 @@
 		}
 		
 		function pagerFilter(data){
-			if (typeof data.length == 'number' && typeof data.splice == 'function'){	// is array
+			if (typeof data.length == 'num' && typeof data.splice == 'function'){	// is array
 				data = {
 					total: data.length,
 					rows: data
