--- a/taotao-manager/taotao-manager-web/src/main/webapp/WEB-INF/js/jquery-easyui-1.4.1/demo/validatebox/customtooltip.html
+++ b/taotao-manager/taotao-manager-web/src/main/webapp/WEB-INF/js/jquery-easyui-1.4.1/demo/validatebox/customtooltip.html
@@ -33,7 +33,7 @@
 			</tr>
 			<tr>
 				<td>Phone:</td>
-				<td><input class="easyui-validatebox textbox" data-options="prompt:'Enter your phone number.',required:true"></td>
+				<td><input class="easyui-validatebox textbox" data-options="prompt:'Enter your phone num.',required:true"></td>
 			</tr>
 		</table>
 	</div>
