--- a/taotao-manager/taotao-manager-web/src/main/webapp/WEB-INF/js/jquery-easyui-1.4.1/demo/numberbox/format.html
+++ b/taotao-manager/taotao-manager-web/src/main/webapp/WEB-INF/js/jquery-easyui-1.4.1/demo/numberbox/format.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 	<h2>Format NumberBox</h2>
-	<p>Number formatting is the ability to control how a number is displayed.</p>
+	<p>Number formatting is the ability to control how a num is displayed.</p>
 	<div style="margin:20px 0;"></div>
 	<table>
 		<tr>
